--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,4 +1,11 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+<html>
+  <head>
+    <meta  content="text/html; charset=windows-1252"  http-equiv="content-type">
+    <link  rel="alternate stylesheet"  type="text/css"  href="resource://gre-resources/plaintext.css"
+       title="Wrap Long Lines">
+  </head>
+  <body>
+    <pre>/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -71,7 +78,7 @@ audio:not([controls]) {
 
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ * Hide the `template` element in IE 8/9/11, Safari, and Firefox &lt; 22.
  */
 
 [hidden],
@@ -878,4 +885,9 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
+
+@font-face {
+    font-family: LTAroma;
+    src: url('../stylesheets/aroma.ttf');
+}
 
